fixed bug where geocoders would overlap each other.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,7 +37,11 @@ a:hover {
 }
 
 .geocoder {
-  z-index: 1;
+  z-index: 3;
+}
+
+.geocoder2 {
+  z-index: 2;
 }
 
 .mapboxgl-ctrl-geocoder {
